Requisito Logging (#148)
* harvester will stop for fatal errors

* adds accepts header for url check

* implementazione iniziale logger

* logging requirement

* fixing lombok's warning